--- a/css/modules/askQuestion.css
+++ b/css/modules/askQuestion.css
@@ -1,6 +1,6 @@
 #virtualclassCont.congrea #askQuestion .container .question .content p {
   font-size: 0.815rem;
-  color: #404040;
+  color: #212121;
   line-height: 1rem;
   margin-bottom: -1px;
   -webkit-font-smoothing: antialiased;
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 3px;
-
+  padding: 5px 2px;
   /* box-shadow: 1px 2px 3px 0 #9a9a9a; */
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
@@ -246,28 +246,48 @@
   position: relative;
 }
 
+#virtualclassCont.congrea #askQuestion .question .container[data-type="question"] {
+  border-left: 2px solid #ff3838;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
 #virtualclassCont.congrea #askQuestion .answers .container,
 #virtualclassCont.congrea #askQuestion .comments .container {
   padding: 1px 8px 1px 8px;
   position: relative;
 }
 
+#virtualclassCont.congrea #askQuestion .answers .container {
+  border-left: 2px solid #1a9e1a;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  margin-top: 4px;
+}
+
+#virtualclassCont.congrea #askQuestion .comments .container {
+  border-left: 2px solid #0170e1;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  margin-top: 4px;
+}
+
 /* #virtualclassCont.congrea #askQuestion .question .container {
   border-left: 2px solid red;
 } */
 
-#virtualclassCont.congrea #askQuestion .answers .container::after {
+/* #virtualclassCont.congrea #askQuestion .answers .container::after {
   content: "";
   position: absolute;
   left: 0;
-  top: 1px;
+  top: 3%;
   width: 2px;
   height: 91%;
-  background: green;
+  background: #1a9e1a;
   display: inline-block;
-}
+} */
 
-#virtualclassCont.congrea #askQuestion .comments .comment .container::after {
+/* #virtualclassCont.congrea #askQuestion .comments .comment .container::after {
   content: "";
   position: absolute;
   left: 0;
@@ -276,7 +296,7 @@
   height: 91%;
   background: #0270e1;
   display: inline-block;
-}
+} */
 
 #virtualclassCont.congrea #askQuestion .question .container .header {
   color: #545454;
@@ -286,8 +306,20 @@
   letter-spacing: 0.2px;
 }
 
+/* #virtualclassCont.congrea #askQuestion .question .container[data-type="question"] .header span.userName {
+  color: #ff3838;
+}
+
+#virtualclassCont.congrea #askQuestion .question .answers .container .header span.userName {
+  color: #1a9e1a;
+}
+
+#virtualclassCont.congrea #askQuestion .question .comments .container .header span.userName {
+  color: #0170e1;
+} */
+
 #virtualclassCont.congrea #askQuestion .question .container .header .lable {
-  margin-left: 8px;
+  margin-left: 10px;
   color: #606060;
   font-size: 0.6875rem;
   text-transform: none;
@@ -298,6 +330,7 @@
 #virtualclassCont.congrea #askQuestion .container .question .answers,
 #virtualclassCont.congrea #askQuestion .container .question .comments {
   margin-left: 4px;
+  margin-top: 2px;
 }
 
 #virtualclassCont.congrea #askQuestion .container .question .footer .moreControls .item.close {
@@ -345,7 +378,6 @@
 #virtualclassCont.congrea #askQuestion .container .footer.show {
   display: flex;
   flex-direction: row;
-  margin-bottom: 3px;
 }
 
 #virtualclassCont.congrea #askQuestion .container .footer .controls .upVote .button {
@@ -356,7 +388,7 @@
 #virtualclassCont.congrea #askQuestion .container .question .footer .controls .navigation .button,
 #virtualclassCont.congrea #askQuestion .container .answer .footer .controls .navigation .button {
   display: inline-block;
-  padding: 0.1875rem 0.3125rem 0 0.125rem;
+  padding: 0.25rem 0.3125rem 0 0.125rem;
 }
 
 /* #virtualclassCont.congrea #askQuestion .container .question .footer .controls .reply#virtualclassCont.congrea #askQuestion .comments .container {
@@ -461,16 +493,16 @@
   padding: 3px 5px 0 1px;
 }
 
-#virtualclassCont.congrea #askQuestion .question .container[data-type="question"]::after {
+/* #virtualclassCont.congrea #askQuestion .question .container[data-type="question"]::after {
   content: "";
   position: absolute;
   left: 0;
-  top: 0;
+  top: 3%;
   width: 2px;
   height: 93%;
-  background: red;
+  background: #ff3838;
   display: inline-block;
-}
+} */
 
 #virtualclassCont.congrea #noteContainer .loading {
   display: none;
