--- a/css/modules/askQuestion.css
+++ b/css/modules/askQuestion.css
@@ -224,7 +224,8 @@
 #virtualclassCont.congrea.student #askQuestion .container .question[data-mark-answer="marked"] .upVote,
 #virtualclassCont.congrea #askQuestion .container .question[data-mark-answer="marked"] .container[data-type="question"] .reply,
 #virtualclassCont.congrea[data-currapp='Poll'] #virtualclassApp #congAskQuestion,
-#virtualclassCont.congrea[data-currapp='Quiz'] #virtualclassApp #congAskQuestion {
+#virtualclassCont.congrea[data-currapp='Quiz'] #virtualclassApp #congAskQuestion,
+#virtualclassCont.congrea.student #askQuestion[data-upvote="disable"] .container .footer .controls .upVote {
   opacity: 0.5 !important;
   pointer-events: none !important;
 }
@@ -516,8 +517,8 @@
   width: 100%;
   height: 100%;
   resize: unset;
-  color: #4a2600;
-  font-size: 0.8125rem;
+  color: #1b1b1b;
+  font-size: 0.84375rem;
   line-height: 1.5rem;
   background-image: -webkit-linear-gradient(left, #fff 0, #daca0900 0), -webkit-linear-gradient(right, #fff 0, #fff28f73 0), -webkit-linear-gradient(white 23px, #000 18px, #00000054 16px, #000000 36px);
   background-repeat: repeat-y;
@@ -772,7 +773,8 @@
 }
 
 #virtualclassCont.congrea #askQuestion .container .footer .controls .upVote,
-#virtualclassCont.congrea #askQuestion .container .footer .controls .navigation {
+#virtualclassCont.congrea #askQuestion .container .footer .controls .navigation,
+#virtualclassCont.congrea.student #askQuestion[data-upvote="enable"] .container .footer .controls .upVote {
   cursor: pointer;
   line-height: 1rem;
 }
@@ -789,7 +791,7 @@
 #virtualclassCont.congrea #askQuestion .container .footer .controls .reply.congtooltip:hover::after,
 #virtualclassCont.congrea #askQuestion .container .footer .controls .navigation.congtooltip:hover::after,
 #virtualclassCont.congrea #askQuestion .container .comment .footer .controls .navigation.congtooltip:hover::after {
-  bottom: 22px;
+  bottom: -25px;
   font-size: 0.6875rem;
 }
 
@@ -798,16 +800,16 @@
 }
 
 #virtualclassCont.congrea #askQuestion .container .comment .footer .controls .navigation.congtooltip:hover::after {
-  right: -40px;
+  right: -42px;
 }
 
 #virtualclassCont.congrea #askQuestion .container .comment .footer .controls .navigation {
   margin-left: 0;
 }
 
-#virtualclassCont.congrea #askQuestion .container .footer .controls .navigation.disable {
+/* #virtualclassCont.congrea #askQuestion .container .footer .controls .navigation.disable {
   pointer-events: none;
-}
+} */
 
 #virtualclassCont.congrea #virtualclassAppFooterPanel #stickycontainer .chatBarTab .askQuestion_btn.highlight-new-question {
   background: #53a83f !important;
@@ -856,6 +858,17 @@
 
 #virtualclassCont #askQuestion.tempDown #writeContent {
   pointer-events: visible;
+}
+
+#virtualclassCont.congrea.student #askQuestion[data-answer="disable"] .container .question .container[data-type="question"] .reply {
+  pointer-events: none;
+  opacity: 0.4;
+}
+
+#virtualclassCont.congrea.student #askQuestion[data-comment="disable"] .answers .answer .container .reply,
+#virtualclassCont.congrea.student #askQuestion[data-comment="disable"] .comments .comment .container .reply {
+  pointer-events: none;
+  opacity: 0.4;
 }
 
 @media only screen and (min-device-width: 340px) and (max-device-width: 950px) {
