--- a/templates/appSettingDetail.hbs
+++ b/templates/appSettingDetail.hbs
@@ -70,12 +70,12 @@
         </label>
       </li>
 
-      <li class="lists-cont d-flex justify-content-between align-items-center" id ="contrMarkNotesAll">
-        <div class="appSettingIcons" id="usersMarkNotesSwitch"></div>
+      <li class="lists-cont d-flex justify-content-between align-items-center" id ="contrQaMarkNotesAll">
+        <div class="appSettingIcons" id="usersQaMarkNotesSwitch"></div>
         {{getString 'MarksAndNotes'}}
-        <label class="switch MarkNotes_toggle">
+        <label class="switch QaMarkNotes_toggle">
           <input type="checkbox">
-          <span class="slider round icon-all-markNotes-enable congtooltip" id ="contrMarkNotesAllImg" ></span>
+          <span class="slider round icon-all-qaMarkNotes-enable congtooltip" id ="contrQaMarkNotesAllImg" ></span>
         </label>
       </li>
    </ul>
