--- a/css/modules/askQuestion.css
+++ b/css/modules/askQuestion.css
@@ -1,7 +1,7 @@
 #virtualclassCont.congrea #askQuestion .container .question .content p {
   font-size: .84375rem;
   color: #3a3a3a;
-  line-height: 1rem;
+  line-height: 1.3;
   margin-bottom: -1px;
   -webkit-font-smoothing: antialiased;
   letter-spacing: 1px;
@@ -66,8 +66,9 @@
   display: inline-block;
 } */
 
-#virtualclassCont.congrea #askQuestion .container .header .info span {
+#virtualclassCont.congrea #askQuestion .container .header .info span.userName {
   display: inline-block;
+  flex: 1;
 }
 
 #virtualclassCont.congrea #askQuestion .container .footer .controls .button,
@@ -203,7 +204,7 @@
 }
 
 #virtualclassCont.congrea #askQuestion #writeContent {
-  margin: 5px 5px 3px 5px;
+  margin: 5px 2px 3px 3px;
   display: flex;
   flex-direction: row;
   border: 1px solid #ccc;
@@ -326,6 +327,10 @@
   line-height: 1rem;
 }
 
+#virtualclassCont.congrea #askQuestion .question .container .header .info {
+  display: flex;
+}
+
 /* #virtualclassCont.congrea #askQuestion .question .container[data-type="question"] .header span.userName {
   color: #ff3838;
 }
@@ -339,12 +344,17 @@
 } */
 
 #virtualclassCont.congrea #askQuestion .question .container .header .lable {
-  margin-left: 10px;
-  color: #606060;
+  margin: 0 5px 0 5px;
+  color: #616161;
   font-size: 0.6875rem;
   text-transform: none;
   font-weight: 400;
   letter-spacing: .5px;
+}
+
+#virtualclassCont.congrea #askQuestion .answer .container .header .lable, 
+#virtualclassCont.congrea #askQuestion .comment .container .header .lable {
+  display: none;
 }
 
 #virtualclassCont.congrea #askQuestion .container .question .answers,
@@ -410,7 +420,7 @@
 
 #virtualclassCont.congrea #askQuestion .container .footer .controls .upVote .button {
   display: inline-block;
-  padding: 0.1563rem 0.125rem 0 0;
+  padding: 0.125rem 0.125rem 0 0;
 }
 
 #virtualclassCont.congrea #askQuestion .container .question .footer .controls .navigation .button,
@@ -436,7 +446,21 @@
 #virtualclassCont.congrea #askQuestion .container .footer .controls .reply:hover,
 #virtualclassCont.congrea #askQuestion .container .footer .controls .navigation:hover,
 #virtualclassCont.congrea #askQuestion .container .footer .controls .upVote:hover {
-  background-color: #e6e6e6;
+  background-color: rgba(1, 112, 225, .1);
+  border-radius: 5px;
+}
+
+#virtualclassCont.congrea #askQuestion .answer .container .footer .controls .reply:hover,
+#virtualclassCont.congrea #askQuestion .answer .container .footer .controls .navigation:hover,
+#virtualclassCont.congrea #askQuestion .answer .container .footer .controls .upVote:hover  {
+  background-color: rgba(25, 157, 27, .1);
+  border-radius: 5px;
+}
+
+#virtualclassCont.congrea #askQuestion .comment .container .footer .controls .reply:hover,
+#virtualclassCont.congrea #askQuestion .comment .container .footer .controls .navigation:hover,
+#virtualclassCont.congrea #askQuestion .comment .container .footer .controls .upVote:hover {
+  background-color: rgba(255, 81, 0, .1);
   border-radius: 5px;
 }
 
