--- a/css/modules/askQuestion.css
+++ b/css/modules/askQuestion.css
@@ -129,8 +129,8 @@
   font-size: 0.75rem;
   width: fit-content;
   width: -moz-fit-content;
-  border: 1px solid #dadada;
-  box-shadow: 0 4px 7px -2px #c1c1c1;
+  border: 1px solid #d6d6d6;
+  box-shadow: 0 4px 7px -2px #cecece;
   background-color: #fbfbfb;
   border-radius: 2px;
   position: absolute;
@@ -142,7 +142,7 @@
   padding: 4px 7px;
   display: block;
   cursor: pointer;
-  color: #4e4e4e;
+  color: #313131;
   background-color: unset;
 }
 
@@ -153,7 +153,7 @@
 
 #virtualclassCont.congrea #askQuestion .container .footer .moreControls .item span:hover {
   background-color: #e9f3ff;
-  color: #0095ef;
+  color: #0170e1;
 }
 
 #virtualclassCont.congrea #askQuestion.active,
@@ -184,7 +184,7 @@
   border-radius: 4px;
   width: 100%;
   color: #434343;
-  font-size: 0.75rem;
+  font-size: 0.84375rem;
   display: block;
   resize: none;
   border: 0.5px solid #b1b1b1;
@@ -281,6 +281,7 @@
 #virtualclassCont.congrea #askQuestion .comments .container {
   padding: 1px 8px 1px 8px;
   position: relative;
+  margin-top: 4px;
 }
 
 #virtualclassCont.congrea #askQuestion .answers .container {
@@ -365,7 +366,7 @@
 #virtualclassCont.congrea #askQuestion .container .question .answers,
 #virtualclassCont.congrea #askQuestion .container .question .comments {
   margin-left: 4px;
-  margin-top: 2px;
+  /* margin-top: 2px; */
 }
 
 #virtualclassCont.congrea #askQuestion .container .question .footer .moreControls .item.close {
