Notification styling for tabs

--- a/css/modules/askQuestion.css
+++ b/css/modules/askQuestion.css
@@ -872,9 +872,9 @@
   pointer-events: none;
 } */
 
-#virtualclassCont.congrea #virtualclassAppFooterPanel #stickycontainer .chatBarTab .askQuestion_btn.highlight-new-question {
+/* #virtualclassCont.congrea #virtualclassAppFooterPanel #stickycontainer .chatBarTab .askQuestion_btn.highlight-new-question {
   background: #53a83f !important;
-}
+} */
 
 #virtualclassCont.congrea #virtualclassAppRightPanel[data-currwindow="askQuestionHeader"] #rightSubContainer #askQuestion #msgContainer {
   background-color: #fff;
