Change language file

--- a/templates/chat/stickycont.hbs
+++ b/templates/chat/stickycont.hbs
@@ -39,7 +39,7 @@
       <!--</a>-->
   <!--</li>-->
 
-  <li class = "askQuestion_btn enable congtooltip bottomright" id ="congAskQuestion" data-title ="{{getString 'ankQuestionEnabled'}}" data-headerid="askQuestionHeader">
+  <li class = "askQuestion_btn enable congtooltip bottomright" id ="congAskQuestion" data-title ="{{getString 'askQuestion'}}" data-headerid="askQuestionHeader">
     <a class="stdAskQuestion">
         <span id="iconAskQuestion" data-action="enable" class="icon-askQuestion-enable" >
         </span>
